# scirs

./: Cargo.toml  Cargo.toml.bak  README.md  RELEASE_NOTES.md  RELEASE_STRATEGY.md  TODO.md  fix_ignores.sh  minimal_neural_test.rs  test_symplectic.rs  test_title.rs  training_history.csv  xor_model.cbor  xor_model.json  xor_model.msgpack
gradient_clipping_example/: Cargo.toml
scirs2-autograd/: Cargo.toml  DEVELOPMENT_SUMMARY.md  FIXED_ISSUES.md  README.md  debug_norm_test.rs  test_output.txt
scirs2-cluster/: Cargo.toml  README.md  test_ignored_algos.rs
scirs2-core/: Cargo.toml  README.md
scirs2-datasets/: Cargo.toml
scirs2-datasets/examples/: time_series_datasets.rs
scirs2-datasets/src/: cache.rs  lib.rs  time_series.rs
scirs2-fft/: Cargo.toml  FRFT_NUMERICAL_ISSUES.md  IGNORED_TESTS_FIXED.md  TEST_FIX_SUMMARY.md  TODO.md  test_stft.rs
scirs2-graph/: Cargo.toml  REFACTORING_SUMMARY.md  test_k_core.rs
scirs2-integrate/: Cargo.toml  DOC_TEST_FIXES_SUMMARY.md  DOC_TEST_FIX_FINAL_REPORT.md  TODO.md  build.rs  fix-fmt.sh  test_bvp.rs  test_tanhsinh.rs
scirs2-interpolate/: Cargo.toml  FIXING_COMPILATION.md  TEST_FIXES_SUMMARY.md  TODO.md
scirs2-io/: Cargo.toml  ENHANCEMENTS_SUMMARY.md  README.md
scirs2-linalg/: Cargo.toml  README.md  TODO.md
scirs2-metrics/: Cargo.toml  build.rs
scirs2-ndimage/: Cargo.toml  TODO.md
scirs2-neural/: Cargo.toml  README.md  test_softmax.rs
scirs2-optim/: Cargo.toml
scirs2-optimize/: Cargo.toml  test_debug_hessian.rs
scirs2-series/: Cargo.toml
scirs2-signal/: Cargo.toml  DWT_REFACTORING.md  test_windows.rs  (+1 more)
(+762 files in other folders)
