[package]
name = "scirs2-datasets"
version = "0.1.0-alpha.3"
edition = "2021"
authors = ["SciRS2 Team"]
license = "MIT OR Apache-2.0"
description = "Datasets module for SciRS2"
repository = "https://github.com/cool-japan/scirs"
keywords = ["datasets", "machine-learning", "data", "scientific", "scipy"]
categories = ["science", "data-structures", "algorithms"]

[dependencies]
# Core dependencies
ndarray = { version = "0.16.1", features = ["serde"] }
scirs2-core = { path = "../scirs2-core", version = "0.1.0-alpha.3", features = ["cache"] }
rand = "0.9.0"
rand_distr = "0.5.1"
thiserror = "1.0.69"

# Data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.2"

# Datasets specific dependencies
reqwest = { version = "0.12", features = ["blocking", "json"], optional = true }
dirs = "6.0"
flate2 = "1.0"
zip = "2.6"
blake3 = "1.5"
lazy_static = "1.4"
ureq = "3.0"
tempfile = "3.10"

[features]
default = []
download = ["reqwest"]